@@ -8,6 +8,8 @@ Bug fixes
 - fix segfaults caused by graph partitioning detectors
 - fix assignSmallestComponentsButOneConssAdjacency()
 - fix clock issue and segfault caused by dec_mst
+- fix segfault caused by dec_stairheur
+- fix parameters 'detection/detectors/stairheur/minblocks' and 'detection/detectors/stairheur/maxblocks'
 
 
 @section RN370 GCG 3.7.0
